# ibow-lcd

./: .gitignore  CMakeLists.txt
evaluation/: main.cc
include/ibow-lcd/: geometricconstraints.h  island.h  lcdetector.h
scripts/: plot_scores.py
src/: geometricconstraints.cc  lcdetector.cc
